--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -7,6 +7,11 @@
   <packaging>war</packaging>
   
   <dependencies>
+  <dependency>
+  <groupId>com.cedarsoftware</groupId>
+    <artifactId>json-io</artifactId>
+    <version>2.0.1</version>
+  </dependency>
   	<dependency>
    		<groupId>com.sun</groupId>
    		<artifactId>tools</artifactId>
