--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -24,6 +24,11 @@
   		<version>2.3.14</version>
   	</dependency>
   	<dependency>
+        <groupId>org.apache.struts</groupId>
+        <artifactId>struts2-json-plugin</artifactId>
+        <version>2.3.14</version>
+	</dependency>
+  	<dependency>
         <groupId>log4j</groupId>
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
@@ -57,6 +62,11 @@
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-log4j12</artifactId>
     	<version>1.7.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.cedarsoftware</groupId>
+    	<artifactId>json-io</artifactId>
+    	<version>2.0.1</version>
     </dependency>
   </dependencies>
   
