--- a/PhotoGenome/src/main/resources/log4j.properties
+++ b/PhotoGenome/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
 # Root logger option
-log4j.rootLogger=INFO
+log4j.rootLogger=INFO, stdout
  
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=C:\\PG-Log.log
+log4j.appender.file.File=C\:\\PG-Log.log
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
