--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
     	<groupId>junit</groupId>
       	<artifactId>junit</artifactId>
-    	<version>3.8.1</version>
+    	<version>4.11</version>
      	<scope>test</scope>
     </dependency>
   	<dependency>
@@ -72,6 +72,12 @@
     	<groupId>com.cedarsoftware</groupId>
     	<artifactId>json-io</artifactId>
     	<version>2.0.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>dbunit</groupId>
+    	<artifactId>dbunit</artifactId>
+    	<version>2.2</version>
+    	<scope>test</scope>
     </dependency>
   </dependencies>
   
