--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -79,6 +79,12 @@
     	<version>2.2</version>
     	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.struts</groupId>
+    	<artifactId>struts2-junit-plugin</artifactId>
+    	<version>2.3.14.3</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   
 </project>
