added UploadPhoto business logic

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,9 +1,3 @@
-label.username = Username
-label.password = Password
-label.login = Login
-label.addUser = Add User
-label.removeUser = Remove User
-label.updateUser = Update User
-label.findUser = Find User
-error.login= Invalid Username/Password. Please try again.
 json.key = items
+photoLinkPath = "C:\\users\\tyler\\desktop
+metadataLinkPath = "C:\\users\tyler\\desktop
