--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,3 +1,3 @@
 json.key = items
-photoLinkPath = "C:\\users\\tyler\\desktop
-metadataLinkPath = "C:\\users\tyler\\desktop
+photoLinkPath = C\:\\temp
+metadataLinkPath = C\:\\temp
