getPhotosByUserId() in ViewInformation prefixes the photo link with the absolute path from the app resources config file

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,5 +1,5 @@
 json.key = items
-photoLinkPath = C\:\\temp
+photoLinkPath = C\:\\temp\\
 photoFileExtension = .jpg
-metadataLinkPath = C\:\\temp
+metadataLinkPath = C\:\\temp\\
 metadataFileExtension = .txt
