changed upload photo to save photos under the jsp folder of the application

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,5 +1,5 @@
 json.key = items
-photoLinkPath = C\:\\temp\\
+photoLinkPath = http://localhost:8080/photogenome/jsp/
 photoFileExtension = .jpg
 metadataLinkPath = C\:\\temp\\
 metadataFileExtension = .txt
