--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -3,3 +3,6 @@ photoLinkPath = http://localhost:8080/photogenome/jsp/
 photoFileExtension = .jpg
 metadataLinkPath = C\:\\temp\\
 metadataFileExtension = .txt
+
+search.sql.query.filteredAssociations = SELECT photometadata.photo_ID, MATCH(photo_metadata) AGAINST ((SELECT photo_metadata FROM photometadata where photo_Id = :photoId ) IN NATURAL LANGUAGE MODE) AS score FROM  photometadata INNER JOIN ( SELECT photo_ID, MATCH(photo_metadata) AGAINST ( :categories IN NATURAL LANGUAGE MODE) AS score FROM photometadata where photo_Id != :photoId group by photo_id having score > 0 ) keywordTable ON photometadata.photo_ID=keywordTable.photo_ID where photometadata.photo_Id != :photoId group by photometadata.photo_Id having score > 0 ORDER BY photometadata.photo_ID DESC LIMIT :maxMatches ;
+search.maxMatches = 10
