updated struts.xml for search actions

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -4,6 +4,7 @@ photoFileExtension = .jpg
 metadataLinkPath = C\:\\temp\\
 metadataFileExtension = .txt
 
+search.sql.query.associations = SELECT * FROM Photo INNER JOIN( SELECT photo_ID, MATCH(photo_metadata) AGAINST ((SELECT photo_metadata FROM photometadata where photo_Id = :photoId ) IN NATURAL LANGUAGE MODE) AS score FROM photometadata where photo_Id != :photoId group by photometadata.photo_Id having score > 0 ORDER BY score DESC LIMIT :maxMatches ) ResultTable ON photo.photo_ID=ResultTable.photo_ID ;
 search.sql.query.filteredAssociations = SELECT * FROM Photo INNER JOIN(SELECT photometadata.photo_ID, MATCH(photo_metadata) AGAINST ((SELECT photo_metadata FROM photometadata where photo_Id = :photoId ) IN NATURAL LANGUAGE MODE) AS score FROM  photometadata INNER JOIN ( SELECT photo_ID, MATCH(photo_metadata) AGAINST ( :categories IN NATURAL LANGUAGE MODE) AS score FROM photometadata where photo_Id != :photoId group by photo_id having score > 0 ) keywordTable ON photometadata.photo_ID=keywordTable.photo_ID where photometadata.photo_Id != :photoId group by photometadata.photo_Id having score > 0 ORDER BY score DESC LIMIT :maxMatches) ResultTable ON photo.photo_ID=ResultTable.photo_ID ;
 search.sql.query.keywords = SELECT * FROM Photo INNER JOIN( SELECT photo_ID, MATCH(photo_metadata) AGAINST ( :keywords IN BOOLEAN MODE) AS score FROM photometadata group by photometadata.photo_Id having score > 0 ORDER BY photometadata.photo_ID DESC LIMIT :maxMatches ) ResultTable ON photo.photo_ID=ResultTable.photo_ID ;
 search.maxMatches = 10
