--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -7,11 +7,12 @@
   <packaging>war</packaging>
   
   <dependencies>
-  <dependency>
-  <groupId>com.cedarsoftware</groupId>
-    <artifactId>json-io</artifactId>
-    <version>2.0.1</version>
-  </dependency>
+      <!-- Java Mail API -->
+    <dependency>
+	 <groupId>javax.mail</groupId>
+	 <artifactId>mail</artifactId>
+	 <version>1.4.3</version>
+    </dependency>
   	<dependency>
    		<groupId>com.sun</groupId>
    		<artifactId>tools</artifactId>
