Added image servlet to retrieve images
Added comments to HibernateUtil

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,8 +1,8 @@
 json.key = items
-photoLinkPath = http://localhost:8080/photogenome/jsp/
+
+photoLinkPath = ec2-50-17-152-221.compute-1.amazonaws.com/photogenome/images/
+photoFilePath = C\:\\PG_Images\\
 photoFileExtension = .jpg
-metadataLinkPath = C\:\\temp\\
-metadataFileExtension = .txt
 
 search.sql.query.associations = SELECT * FROM Photo INNER JOIN( SELECT photo_ID, MATCH(photo_metadata) AGAINST ((SELECT photo_metadata FROM photometadata where photo_Id = :photoId ) IN NATURAL LANGUAGE MODE) AS score FROM photometadata where photo_Id != :photoId group by photometadata.photo_Id having score > 0 ORDER BY score DESC LIMIT :maxMatches ) ResultTable ON photo.photo_ID=ResultTable.photo_ID ;
 search.sql.query.filteredAssociations = SELECT * FROM Photo INNER JOIN(SELECT photometadata.photo_ID, MATCH(photo_metadata) AGAINST ((SELECT photo_metadata FROM photometadata where photo_Id = :photoId ) IN NATURAL LANGUAGE MODE) AS score FROM  photometadata INNER JOIN ( SELECT photo_ID, MATCH(photo_metadata) AGAINST ( :categories IN NATURAL LANGUAGE MODE) AS score FROM photometadata where photo_Id != :photoId group by photo_id having score > 0 ) keywordTable ON photometadata.photo_ID=keywordTable.photo_ID where photometadata.photo_Id != :photoId group by photometadata.photo_Id having score > 0 ORDER BY score DESC LIMIT :maxMatches) ResultTable ON photo.photo_ID=ResultTable.photo_ID ;
