--- a/PhotoGenome/src/main/webapp/WEB-INF/web.xml
+++ b/PhotoGenome/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <servlet>
+	<servlet-name>images</servlet-name>
+	<servlet-class>edu.cmu.photogenome.util.ImageServlet</servlet-class>
+	</servlet>
+  <servlet-mapping>
+	<servlet-name>images</servlet-name>
+	<url-pattern>/images/*</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>Login.jsp</welcome-file>
   </welcome-file-list>
