--- a/PhotoGenome/pom.xml
+++ b/PhotoGenome/pom.xml
@@ -7,12 +7,6 @@
   <packaging>war</packaging>
   
   <dependencies>
-      <!-- Java Mail API -->
-    <dependency>
-	 <groupId>javax.mail</groupId>
-	 <artifactId>mail</artifactId>
-	 <version>1.4.3</version>
-    </dependency>
   	<dependency>
    		<groupId>com.sun</groupId>
    		<artifactId>tools</artifactId>
@@ -85,6 +79,16 @@
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-io</artifactId>
     	<version>1.3.2</version>
+    </dependency>
+    <dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4.3</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
     </dependency>
   </dependencies>
   
