updated search and upload business logic

--- a/PhotoGenome/src/main/resources/ApplicationResources.properties
+++ b/PhotoGenome/src/main/resources/ApplicationResources.properties
@@ -1,6 +1,6 @@
 json.key = items
 
-photoLinkPath = ec2-50-17-152-221.compute-1.amazonaws.com/photogenome/images/
+photoLinkPath = http://ec2-50-17-152-221.compute-1.amazonaws.com/photogenome/images/
 photoFilePath = C\:\\PG_Images\\
 photoFileExtension = .jpg
 
